Overflow fix

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,6 +3,7 @@
   padding: 100px 0px;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 .small {
