--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -3,6 +3,7 @@ nav {
   justify-content: space-between;
   padding: 20px;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .logo-icon {
